# miniature-enigma

./: .gitignore  .gitlab-ci.yml  CICD.crt  CMakeLists.txt  Dockerfile  README.md  a.out  cert.pem  main.cpp  notes.md  runmytests.sh  testing_ci_with_stm Debug.launch  testing_ci_with_stm.ioc
Core/Src/: main.c
Debug/: makefile  testing_ci_with_stm.elf  testing_ci_with_stm.list  testing_ci_with_stm.map
Debug/Core/Src/: main.su  stm32f1xx_hal_msp.su  subdir.mk
Debug/Core/Startup/: subdir.mk
Debug/Drivers/STM32F1xx_HAL_Driver/Src/: subdir.mk
